Realice algunos ajustes

--- a/tambo_filter.ipynb
+++ b/tambo_filter.ipynb
@@ -4,474 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gago juegos"
+    "# Tambo Filter\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Codigo de blackbox"
+    "We import the necessary libraries "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def Filter(All_particles, particle_type, length_triangle):\n",
-    "    # Filter for charged particles\n",
-    "    filtered_particles = All_particles[All_particles['Particle Type'] == particle_type]\n",
-    "    \n",
-    "    # Filter for particles within the specified triangle length\n",
-    "    min_distance = length_triangle / 2\n",
-    "    max_distance = length_triangle * sqrt(3) / 2\n",
-    "    filtered_particles = filtered_particles[(filtered_particles['Detector 1'] >= min_distance) & (filtered_particles['Detector 1'] <= max_distance) &\n",
-    "                                           (filtered_particles['Detector 2'] >= min_distance) & (filtered_particles['Detector 2'] <= max_distance) &\n",
-    "                                           (filtered_particles['Detector 3'] >= min_distance) & (filtered_particles['Detector 3'] <= max_distance)]\n",
-    "    \n",
-    "    # Convert the resulting table to a dataframe\n",
-    "    df = pd.DataFrame(filtered_particles)\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def Filter(All_particles_df, particle_id, length_triangle):\n",
-    "    # Filter for particles with the specified ID\n",
-    "    filtered_df = All_particles_df[All_particles_df['ID'].isin(particle_id)]\n",
-    "    \n",
-    "    # Filter for particles within the specified length triangle\n",
-    "    center_detector = len(filtered_df) // 3 # Assume equal number of particles per detector\n",
-    "    x_min = center_detector - length_triangle\n",
-    "    x_max = center_detector + length_triangle\n",
-    "    filtered_df = filtered_df[(filtered_df['Detector'] >= x_min) & (filtered_df['Detector'] <= x_max)]\n",
-    "    \n",
-    "    return filtered_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "def Filter(All_particles_df, particle_id, length_triangle):\n",
-    "    # Filter for particles with the specified ID\n",
-    "    filtered_df = All_particles_df[All_particles_df['ID'].isin(particle_id)]\n",
-    "\n",
-    "    # Define the coordinates of the triangle\n",
-    "    center_detector = len(filtered_df) // 3 # Assume equal number of particles per detector\n",
-    "    a = {'x': 0, 'y': 0}\n",
-    "    b = {'x': length_triangle, 'y': 0}\n",
-    "    c = {'x': center_detector, 'y': np.sqrt(3)/2 * length_triangle}\n",
-    "\n",
-    "    # Calculate the distances of the particles to the triangle vertices\n",
-    "    ax = filtered_df['x'].values - a['x']\n",
-    "    ay = filtered_df['y'].values - a['y']\n",
-    "    bx = filtered_df['x'].values - b['x']\n",
-    "    by = filtered_df['y'].values - b['y']\n",
-    "    cx = filtered_df['x'].values - c['x']\n",
-    "    cy = filtered_df['y'].values - c['y']\n",
-    "    lengths = np.sqrt(ax**2 + ay**2), np.sqrt(bx**2 + by**2), np.sqrt(cx**2 + cy**2)\n",
-    "\n",
-    "    # Filter for particles within the triangle\n",
-    "    filtered_df = filtered_df[np.any(np.all(lengths <= length_triangle, axis=1), axis=0)]\n",
-    "\n",
-    "    return filtered_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "def Filter(All_particles_df, particle_id, length_triangle):\n",
-    "    # Filter for particles with the specified ID\n",
-    "    filtered_df = All_particles_df[All_particles_df['ID'].isin(particle_id)]\n",
-    "\n",
-    "    # Define the coordinates of the triangle\n",
-    "    a = {'x': 0, 'y': 0}\n",
-    "    b = {'x': length_triangle, 'y': 0}\n",
-    "    c = {'x': length_triangle/2, 'y': np.sqrt(3)/2 * length_triangle}\n",
-    "\n",
-    "    # Filter for particles within the triangle\n",
-    "    distances = np.array([np.linalg.norm(np.array(particle) - np.array(vertex)) for particle in filtered_df[['x', 'y']].values for vertex in [a, b, c]])\n",
-    "    filtered_df = filtered_df[distances.min(axis=1) <= length_triangle]\n",
-    "\n",
-    "    return filtered_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Filtros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Filtro geometrico\n",
-    "import numpy as np\n",
-    "\n",
-    "def inside_detector(l, a, b, x, y):\n",
-    "    \"\"\"\n",
-    "    Check if a point (x, y) is inside any of the detectors based on the triangle side length l\n",
-    "    and detector dimensions a and b.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    l (float): the side of the triangle.\n",
-    "    a (float): the width of the detector.\n",
-    "    b (float): the height of the detector.\n",
-    "    x (float): x-coordinate of the point.\n",
-    "    y (float): y-coordinate of the point.\n",
-    "    \n",
-    "    Returns:\n",
-    "    int: The detector number if inside a detector, 0 otherwise.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Check for D1\n",
-    "    if ((l / np.sqrt(3) - b / 2) <= x <= (l / np.sqrt(3) + b / 2)) and (-a / 2 <= y <= a / 2):\n",
-    "        return 1\n",
-    "    \n",
-    "    # Check for D2\n",
-    "    if ((-l / (2 * np.sqrt(3)) - b / 2) <= x <= (-l / (2 * np.sqrt(3)) + b / 2)) and ((l / 2 - a / 2) <= y <= (l / 2 + a / 2)):\n",
-    "        return 2\n",
-    "    \n",
-    "    # Check for D3\n",
-    "    if ((-l / (2 * np.sqrt(3)) - b / 2) <= x <= (-l / (2 * np.sqrt(3)) + b / 2)) and ((-l / 2 - a / 2) <= y <= (-l / 2 + a / 2)):\n",
-    "        return 3\n",
-    "    \n",
-    "    # If the point is not in any detector\n",
-    "    return 0\n",
-    "\n",
-    "# Example to check if the function works\n",
-    "# We'll test with a triangle side length of 10, and detector dimensions 2x2\n",
-    "# We expect the following point to be in detector 1\n",
-    "l = 10\n",
-    "a = 2\n",
-    "b = 2\n",
-    "x_test = l / np.sqrt(3)\n",
-    "y_test = 0\n",
-    "\n",
-    "inside_detector(l, a, b, x_test, y_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[182]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Cargamos la lista de IDs desde el archivo\n",
-    "with open('particulas_cargadas.txt', 'r') as file:\n",
-    "    particle_ids = [int(line.strip()) for line in file.readlines()]\n",
-    "\n",
-    "# Ahora definimos una función que filtrará las partículas basadas en el ID y si están dentro de un detector\n",
-    "def filter_particles(particles, l, a, b):\n",
-    "    \"\"\"\n",
-    "    Filter the particles based on whether they are inside a detector and their ID is in the loaded list.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    particles (list of tuples): List of tuples, where each tuple is (id, x, y), representing a particle.\n",
-    "    l (float): the side of the triangle.\n",
-    "    a (float): the width of the detector.\n",
-    "    b (float): the height of the detector.\n",
-    "    \n",
-    "    Returns:\n",
-    "    list: A list of particle IDs that are inside a detector and are in the allowed list.\n",
-    "    \"\"\"\n",
-    "    filtered_ids = []\n",
-    "    for particle_id, x, y in particles:\n",
-    "        if particle_id in particle_ids and inside_detector(l, a, b, x, y):\n",
-    "            filtered_ids.append(particle_id)\n",
-    "    return filtered_ids\n",
-    "\n",
-    "# Esta es una función de ejemplo que simula la entrada de partículas\n",
-    "def example_particle_stream(num_particles, l, a, b):\n",
-    "    \"\"\"\n",
-    "    Generate a stream of particles with random IDs and positions.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    num_particles (int): Number of particles to generate.\n",
-    "    l (float): the side of the triangle.\n",
-    "    a (float): the width of the detector.\n",
-    "    b (float): the height of the detector.\n",
-    "    \n",
-    "    Returns:\n",
-    "    list: A list of tuples representing particles with (id, x, y).\n",
-    "    \"\"\"\n",
-    "    # Random state for reproducibility\n",
-    "    np.random.seed(0)\n",
-    "    particles = []\n",
-    "    for _ in range(num_particles):\n",
-    "        particle_id = np.random.randint(1, 200)  # Random ID between 1 and 200\n",
-    "        x = np.random.uniform(-l/2, l/2)  # Random x position within triangle bounds\n",
-    "        y = np.random.uniform(-l/(2*np.sqrt(3)), l*np.sqrt(3)/2)  # Random y position\n",
-    "        particles.append((particle_id, x, y))\n",
-    "    return particles\n",
-    "\n",
-    "# Probemos con 100 partículas y veamos cuántas son aceptadas por el filtro.\n",
-    "example_particles = example_particle_stream(100, l, a, b)\n",
-    "filtered_particle_ids = filter_particles(example_particles, l, a, b)\n",
-    "\n",
-    "# Ver los IDs de las partículas filtradas\n",
-    "filtered_particle_ids\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Codigo interesante"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>Detector</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>194.0</td>\n",
-       "      <td>-2.115236</td>\n",
-       "      <td>4.245348</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>143.0</td>\n",
-       "      <td>-3.587361</td>\n",
-       "      <td>5.739779</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>54.0</td>\n",
-       "      <td>4.840422</td>\n",
-       "      <td>0.310542</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>24.0</td>\n",
-       "      <td>4.825750</td>\n",
-       "      <td>0.426258</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      ID         x         y  Detector\n",
-       "0  194.0 -2.115236  4.245348         2\n",
-       "1  143.0 -3.587361  5.739779         2\n",
-       "2   54.0  4.840422  0.310542         1\n",
-       "3   24.0  4.825750  0.426258         1"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# Vamos a simular un dataframe de pandas con las columnas 'ID', 'x' y 'y'.\n",
-    "# Esta sería la estructura del dataframe que recibiría la función 'Filter'.\n",
-    "# All_particles_df = pd.DataFrame({\n",
-    "#     'ID': [lista de IDs],\n",
-    "#     'x': [lista de coordenadas x],\n",
-    "#     'y': [lista de coordenadas y]\n",
-    "# })\n",
-    "l = 10\n",
-    "a = 2\n",
-    "b = 2\n",
-    "# Por ahora, creamos un dataframe de ejemplo con datos aleatorios para probar la función.\n",
-    "np.random.seed(0)  # Para reproducibilidad en el ejemplo\n",
-    "example_ids = np.random.randint(1, 200, size=100)\n",
-    "example_x = np.random.uniform(-l/2, l/2, size=100)\n",
-    "example_y = np.random.uniform(-l/(2*np.sqrt(3)), l*np.sqrt(3)/2, size=100)\n",
-    "\n",
-    "All_particles_df = pd.DataFrame({\n",
-    "    'ID': example_ids,\n",
-    "    'x': example_x,\n",
-    "    'y': example_y\n",
-    "})\n",
-    "\n",
-    "# Ahora definimos la función Filter.\n",
-    "def Filter(all_particles_df, charged_particles, length_triangle):\n",
-    "    \"\"\"\n",
-    "    Apply geometric and charged particle ID filters to the dataframe of all particles.\n",
-    "\n",
-    "    Parameters:\n",
-    "    all_particles_df (DataFrame): Dataframe with all particle data.\n",
-    "    charged_particles (list): List of charged particle IDs to filter.\n",
-    "    length_triangle (float): Length of the triangle side.\n",
-    "\n",
-    "    Returns:\n",
-    "    DataFrame: Filtered dataframe with particle data that hit the detectors.\n",
-    "    \"\"\"\n",
-    "    # Seleccionar las partículas que están en la lista de partículas cargadas\n",
-    "    charged_df = all_particles_df[all_particles_df['ID'].isin(charged_particles)]\n",
-    "\n",
-    "    # Inicializar una lista para guardar los datos de las partículas detectadas\n",
-    "    detected_particles = []\n",
-    "\n",
-    "    # Iterar sobre las partículas y aplicar el filtro de detector\n",
-    "    for index, row in charged_df.iterrows():\n",
-    "        detector_number = inside_detector(length_triangle, a, b, row['x'], row['y'])\n",
-    "        if detector_number:\n",
-    "            detected_particles.append((row['ID'], row['x'], row['y'], detector_number))\n",
-    "\n",
-    "    # Crear un dataframe a partir de las partículas detectadas\n",
-    "    detected_df = pd.DataFrame(detected_particles, columns=['ID', 'x', 'y', 'Detector'])\n",
-    "\n",
-    "    # Retornar el dataframe de partículas detectadas\n",
-    "    return detected_df\n",
-    "\n",
-    "# Llamada de ejemplo a la función Filter\n",
-    "filtered_df = Filter(All_particles_df, particle_ids, l)\n",
-    "filtered_df.head()  # Mostrar las primeras filas del dataframe filtrado como ejemplo\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Índice: 0\n",
-      "Fila: A    1\n",
-      "B    4\n",
-      "Name: 0, dtype: int64\n",
-      "Valor en columna A: 1\n",
-      "Valor en columna B: 4\n",
-      "Índice: 1\n",
-      "Fila: A    2\n",
-      "B    5\n",
-      "Name: 1, dtype: int64\n",
-      "Valor en columna A: 2\n",
-      "Valor en columna B: 5\n",
-      "Índice: 2\n",
-      "Fila: A    3\n",
-      "B    6\n",
-      "Name: 2, dtype: int64\n",
-      "Valor en columna A: 3\n",
-      "Valor en columna B: 6\n"
+      "/home/jd/.local/lib/python3.10/site-packages/pandas/core/arrays/masked.py:62: UserWarning: Pandas requires version '1.3.4' or newer of 'bottleneck' (version '1.3.2' currently installed).\n",
+      "  from pandas.core import (\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Un dataframe de ejemplo\n",
-    "df = pd.DataFrame({\n",
-    "    'A': [1, 2, 3],\n",
-    "    'B': [4, 5, 6]\n",
-    "})\n",
-    "\n",
-    "# Usamos iterrows() para iterar sobre el dataframe\n",
-    "for index, row in df.iterrows():\n",
-    "    print(\"Índice:\", index)\n",
-    "    print(\"Fila:\", row)\n",
-    "    print(\"Valor en columna A:\", row['A'])\n",
-    "    print(\"Valor en columna B:\", row['B'])\n"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The real goated"
+    "The code and a little explanation is provided "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
     "def Filter_boolean(all_particles_df, charged_particles, length_triangle, a, b):\n",
     "    \"\"\"\n",
     "    Apply geometric and charged particle ID filters to the dataframe of all particles using vectorized operations.\n",
@@ -520,13 +94,6 @@
     "\n",
     "    return df_detector_1, df_detector_2, df_detector_3\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
