--- a/plotter1.ipynb
+++ b/plotter1.ipynb
@@ -112,7 +112,18 @@
     "E_list = [2,3,4,5,6,7] #cambiar por E_list\n",
     "Part_count_list = [25,23,16,15,9,6]  #cambiar por Part_count_list\n",
     "\n",
-    "energy_x = np.asarray(E_list)      #convierte a array par chambear light\n"
+    "energy_x = np.asarray(E_list)      #convierte a array par chambear light\n",
+    "slope, intercept, r_val, p_val, std_err = linregress(energy_x, Part_count_list)\n",
+    "trend_line = slope * energy_x + intercept\n",
+    "\n",
+    "plt.scatter(energy_x, Part_count_list, color='red') \n",
+    "#plt.title('Poner título aquí')\n",
+    "plt.plot(energy_x, trend_line, color='lightblue', label=f'Tendencia: y = {slope:.2f}x + {intercept:.2f}\\n$R^2$ = {r_val**2:.4f}')\n",
+    "plt.xlabel('Energía') \n",
+    "plt.ylabel('Conteo de partículas') \n",
+    "plt.legend()\n",
+    "plt.grid(True) \n",
+    "plt.show() "
    ]
   }
  ],
