--- a/plotter1.ipynb
+++ b/plotter1.ipynb
@@ -26,7 +26,7 @@
     "pickle_path=''\n",
     "\n",
     "## Deserializing the pickle\n",
-    "with open('data.pkl', 'rb') as file:\n",
+    "with open(pickle_path, 'rb') as file:\n",
     "    showers = pickle.load(file)"
    ]
   },
@@ -104,9 +104,24 @@
    "outputs": [],
    "source": [
     "##PARTE DE FIORELLA\n",
+    "E_list=[]\n",
+    "Part_count_list=[]\n",
     "\n",
-    "\n",
-    "\n",
+    "for lluvia in lluvias:\n",
+    "    \n",
+    "    diccionario=lluvia[0]\n",
+    "    df1=lluvia[1]\n",
+    "    df2=lluvia[2]\n",
+    "    df3=lluvia[3]\n",
+    "    df0=lluvia[4]\n",
+    "    energias=diccionario[\"PRME\"]\n",
+    "    A1=len(df1)\n",
+    "    A2=len(df2)\n",
+    "    A3=len(df3)\n",
+    "    A0=len(df0)\n",
+    "    Part_count= A1+A2+A3+A0\n",
+    "    Part_count_list.append(Par_count)\n",
+    "    E_list.append(energias)\n",
     "\n",
     "##PARTE DE JP\n",
     "E_list = [2,3,4,5,6,7] #cambiar por E_list\n",
