--- a/plotter1.ipynb
+++ b/plotter1.ipynb
@@ -32,25 +32,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e731c424-0f16-4358-8d41-e2c331ccc8c5",
+   "metadata": {},
+   "source": [
+    "## Particle count vs multiplicity"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "53000c71-0e9b-4b2e-b04c-c5fa97ee8fe6",
+   "execution_count": null,
+   "id": "7f7a1b12-d4b5-4b85-b1da-bdabbc3ab238",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'showers' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      3\u001b[0m detB_list\u001b[38;5;241m=\u001b[39m[]\n\u001b[0;32m      4\u001b[0m detC_list\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m shower \u001b[38;5;129;01min\u001b[39;00m showers:\n\u001b[0;32m      8\u001b[0m     detA_df,detB_df,detC_df,det0_df,\u001b[38;5;241m=\u001b[39mshower[\u001b[38;5;241m1\u001b[39m:]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'showers' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##PARTE DE FRANCISCO\n",
     "det0_list=[]\n",
@@ -94,7 +90,54 @@
     "#detC_unique_counts\n",
     "#detC_showers_with_that_count\n",
     "\n",
-    "##PARTE DE JD\n"
+    "##PARTE DE JD\n",
+    "\n",
+    "\n",
+    "\n",
+    "#plt.plot(det0_unique_counts, det0_showers_with_that_count, color='black',linestyle='--', label= \"Detector 0\") \n",
+    "plt.plot(detA_unique_counts, detA_showers_with_that_count, color='red',linestyle='-', label= \"Detector A\") \n",
+    "plt.plot(detB_unique_counts, detB_showers_with_that_count, color='blue',linestyle='--', label= \"Detector B\") \n",
+    "plt.plot(detC_unique_counts, detC_showers_with_that_count, color='green',linestyle='--', label= \"Detector C\") \n",
+    "\n",
+    "plt.title('Conteo de particulas en todos los detectores vs Multiplicidad del conteo')\n",
+    "plt.xlabel('Conteo de particulas') \n",
+    "plt.ylabel('Multiplicidad (Escala logaritmica)') \n",
+    "plt.yscale('log')\n",
+    "#plt.xlim(0, 30)\n",
+    "plt.legend()\n",
+    "plt.grid(True) \n",
+    "\n",
+    "# Mostrar la gráfica.\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dddb5e2d-8848-4acc-8acc-60f2fe81f7d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(det0_unique_counts, det0_showers_with_that_count, color='black', label= \"Detector 0\") \n",
+    "\n",
+    "plt.title('Conteo de particulas en todos los detectores vs Multiplicidad del conteo')\n",
+    "plt.xlabel('Conteo de particulas') \n",
+    "plt.ylabel('Multiplicidad (Escala logaritmica)') \n",
+    "plt.yscale('log')\n",
+    "plt.xlim(0, 30)\n",
+    "plt.legend()\n",
+    "plt.grid(True) \n",
+    "\n",
+    "# Mostrar la gráfica.\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "787a9ddb-3d93-4c45-a0a0-823e32182b42",
+   "metadata": {},
+   "source": [
+    "## Particle count vs primary energy"
    ]
   },
   {
@@ -173,7 +216,7 @@
     }
    ],
    "source": [
-    "#### ALTERNATIVE\n",
+    "#### ALTERNATIVE, only det1\n",
     "\n",
     "##PARTE DE FIORELLA\n",
     "E_list=[]\n",
