--- a/plotter1.ipynb
+++ b/plotter1.ipynb
@@ -250,12 +250,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "155ef463-219d-4068-ac1d-7adfdc2f64ec",
+   "metadata": {},
+   "source": [
+    "## Histogram particle count"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d15f0b6-76b6-4ddc-8fb6-148b298dd17a",
+   "id": "c2af98a8-dc27-49e1-8cc2-41597c769467",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def count_particles(shower_summary,central_det=True):\n",
+    "    diccionario=shower_summary[0]\n",
+    "    df1=shower_summary[1]\n",
+    "    df2=shower_summary[2]\n",
+    "    df3=shower_summary[3]\n",
+    "    energy=diccionario[\"PRME\"]\n",
+    "    A1=len(df1)\n",
+    "    A2=len(df2)\n",
+    "    A3=len(df3)\n",
+    "    part_count= A1+A2+A3\n",
+    "    if central_det:\n",
+    "        df0=shower_summary[4]\n",
+    "        A0=len(df0)\n",
+    "        part_count=part_count + A0\n",
+    "    return energy,part_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c87bde7e-7f0b-4492-b402-558ad2d0cb5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e_list=[]\n",
+    "count_list=[]\n",
+    "for shower in showers:\n",
+    "    energy,part_count= count_particles(shower,central_det=True)\n",
+    "    e_list.append[energy]\n",
+    "    count_list.append[part_count]\n",
+    "\n",
+    "e_unique=list(set(e_list))\n",
+    "for energy in e_unique:\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
