--- a/plotter1.ipynb
+++ b/plotter1.ipynb
@@ -405,8 +405,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4cb9edda-c3d5-49ee-9df3-db0502d66704",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\cg_h2\\\\Documents\\\\github\\\\PUCP-ARRAY'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fefec21a-b488-497a-99f7-384bea50b621",
    "metadata": {},
    "outputs": [],
    "source": []
