--- a/PlotterV2.ipynb
+++ b/PlotterV2.ipynb
@@ -199,7 +199,7 @@
     "for energy in e_unique:\n",
     "    data=energies_and_counts[energy]\n",
     "    bin_num=max(data)\n",
-    "    plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy}')\n",
+    "    plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy} GeV')\n",
     "\n",
     "plt.xlabel('Particle count')\n",
     "plt.ylabel('Probability distribution')\n",
@@ -232,7 +232,7 @@
     "    if energy in [70000]:    ## Energy value\n",
     "        data=energies_and_counts[energy]\n",
     "        bin_num=max(data)\n",
-    "        plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy}')\n",
+    "        plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy} GeV')\n",
     "\n",
     "plt.xlabel('Particle count')\n",
     "plt.ylabel('Probability distribution')\n",
@@ -365,7 +365,7 @@
     "for energy in e_unique:\n",
     "    data=energies_and_deltasi0[energy]\n",
     "    bin_num=200\n",
-    "    plt.hist(data, bins=bin_num, histtype=\"step\", density=True, label=f'PRME: {energy}')\n",
+    "    plt.hist(data, bins=bin_num, histtype=\"step\", density=True, label=f'PRME: {energy} GeV')\n",
     "\n",
     "\n",
     "plt.xlabel('Average delta_t_i0 (ns)')\n",
@@ -402,7 +402,7 @@
     "        bin_num=100\n",
     "        \n",
     "        plt.figure(figsize=(8, 6))\n",
-    "        plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy}')\n",
+    "        plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy} GeV')\n",
     "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean + sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean - sd, color='b', linestyle='dashed', linewidth=1)\n",
@@ -437,7 +437,7 @@
     "for energy in e_unique:\n",
     "    data=energies_and_deltasij[energy]\n",
     "    bin_num=100\n",
-    "    plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy}')\n",
+    "    plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy} GeV')\n",
     "\n",
     "\n",
     "plt.xlabel('Average delta_t_ij (ns)')\n",
@@ -473,7 +473,7 @@
     "        mean=np.nanmean(data)\n",
     "        sd=np.nanstd(data)\n",
     "        bin_num=100\n",
-    "        plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy}')\n",
+    "        plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy} GeV')\n",
     "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean + sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean - sd, color='b', linestyle='dashed', linewidth=1)\n",
@@ -516,7 +516,7 @@
     "for energy in e_unique:\n",
     "    data=energies_and_deltasi0[energy]\n",
     "    bin_num=200\n",
-    "    sns.kdeplot(data,label = f'PRME: {energy}')\n",
+    "    sns.kdeplot(data,label = f'PRME: {energy} GeV')\n",
     "\n",
     "\n",
     "plt.xlabel('Average delta_t_i0 (ns)')\n",
@@ -553,7 +553,7 @@
     "        bin_num=100\n",
     "        \n",
     "        plt.figure(figsize=(8, 6))\n",
-    "        sns.kdeplot(data,label = f'PRME: {energy}')\n",
+    "        sns.kdeplot(data,label = f'PRME: {energy} GeV')\n",
     "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean + sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean - sd, color='b', linestyle='dashed', linewidth=1)\n",
@@ -588,7 +588,7 @@
     "for energy in e_unique:\n",
     "    data=energies_and_deltasij[energy]\n",
     "    bin_num=100\n",
-    "    sns.kdeplot(data,label = f'PRME: {energy}')\n",
+    "    sns.kdeplot(data,label = f'PRME: {energy} GeV')\n",
     "\n",
     "\n",
     "plt.xlabel('Average delta_t_ij (ns)')\n",
@@ -624,7 +624,7 @@
     "        mean=np.nanmean(data)\n",
     "        sd=np.nanstd(data)\n",
     "        bin_num=100\n",
-    "        sns.kdeplot(data,label = f'PRME: {energy}')\n",
+    "        sns.kdeplot(data,label = f'PRME: {energy} GeV')\n",
     "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean + sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean - sd, color='b', linestyle='dashed', linewidth=1)\n",
