--- a/PlotterV2.ipynb
+++ b/PlotterV2.ipynb
@@ -403,7 +403,7 @@
     "        \n",
     "        plt.figure(figsize=(8, 6))\n",
     "        plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy} GeV')\n",
-    "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
+    "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1,label= f\"Mean: {round(mean,2)} ns\")\n",
     "        plt.axvline(mean + sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean - sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.xlabel('Average delta_t_i0 (ns)')\n",
@@ -474,7 +474,7 @@
     "        sd=np.nanstd(data)\n",
     "        bin_num=100\n",
     "        plt.hist(data, bins=bin_num,histtype=\"step\", density=True, label=f'PRME: {energy} GeV')\n",
-    "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
+    "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1,label= f\"Mean: {round(mean,2)} ns\")\n",
     "        plt.axvline(mean + sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean - sd, color='b', linestyle='dashed', linewidth=1)\n",
     "\n",
@@ -554,7 +554,7 @@
     "        \n",
     "        plt.figure(figsize=(8, 6))\n",
     "        sns.kdeplot(data,label = f'PRME: {energy} GeV')\n",
-    "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
+    "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1,label= f\"Mean: {round(mean,2)} ns\")\n",
     "        plt.axvline(mean + sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean - sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.xlabel('Average delta_t_i0 (ns)')\n",
@@ -625,7 +625,7 @@
     "        sd=np.nanstd(data)\n",
     "        bin_num=100\n",
     "        sns.kdeplot(data,label = f'PRME: {energy} GeV')\n",
-    "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1)\n",
+    "        plt.axvline(mean, color='r', linestyle='dashed', linewidth=1,label= f\"Mean: {round(mean,2)} ns\")\n",
     "        plt.axvline(mean + sd, color='b', linestyle='dashed', linewidth=1)\n",
     "        plt.axvline(mean - sd, color='b', linestyle='dashed', linewidth=1)\n",
     "\n",
