--- a/RandomBackground.ipynb
+++ b/RandomBackground.ipynb
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "ea36e80e-c4c0-4020-b95b-b789f31a1abf",
    "metadata": {},
    "outputs": [],
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "3ebf4440-0613-4306-bc66-cffc5be3694e",
    "metadata": {},
    "outputs": [],
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "ad220cd2-fabb-4305-ad91-e62c18725007",
    "metadata": {},
    "outputs": [],
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "1e21a8d3-6fa4-4d13-b919-a92577102712",
    "metadata": {},
    "outputs": [],
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "1ba0b6f1-6b86-4c82-823a-b1a05f527dd9",
    "metadata": {
     "scrolled": true
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "483cef3a-990d-4586-a02f-f045d441a569",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "47eb0f42-7c5a-4c3f-8ad5-655170e6fcd9",
    "metadata": {},
    "outputs": [],
@@ -1092,11 +1092,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "9e65c37c-ff50-4dd5-aa33-5f959aab18f6",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1133,47 +1131,108 @@
    "execution_count": 20,
    "id": "81fc521c-aed4-44c4-9289-cfb4619d553b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.651403430223691e-25"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "f_at_least_2(1e-15,p=bin)"
+    "def coincidence_time(delta_t):\n",
+    "    prob=f_at_least_2(delta_t,p=bin)\n",
+    "    deltas=1/delta_t\n",
+    "    return 1/(prob*deltas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "d13b907f-96d1-4fd0-8a38-5628352d76e0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "246.66666666666666"
+       "0.0563808936046972"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5*185*16*1/60 "
+    "coincidence_time(50e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "aadd96c5-1a38-460e-bbc6-c3c716ff96be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000000000.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b5c86255-fa8f-4e51-a98c-56b27f0b3a62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.013334929841133384"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.pi*((60/np.sqrt(3))**2) * 1.48 * 1e-4 * 0.0239"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "eafbe20d-f53d-4adc-a5dd-4e10d9a14fc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.99102071878666"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/0.013334929841133384"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aadd96c5-1a38-460e-bbc6-c3c716ff96be",
+   "id": "a0a1b015-bee9-463b-8a3e-4afb8e230f9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abe6f369-16b4-4fda-9b77-dde41e0c4c2a",
    "metadata": {},
    "outputs": [],
    "source": []
