--- a/RandomBackground.ipynb
+++ b/RandomBackground.ipynb
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "id": "483cef3a-990d-4586-a02f-f045d441a569",
    "metadata": {},
    "outputs": [],
@@ -1221,46 +1221,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "id": "a0a1b015-bee9-463b-8a3e-4afb8e230f9d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def coincidences_in_a_day_anydets(delta_t):\n",
     "    prob=f_at_least_2(delta_t,p=bin)\n",
-    "    deltas=96400/delta_t\n",
+    "    deltas=86400/delta_t\n",
     "    return (prob*deltas)\n",
     "def coincidences_in_a_day_specificdets(delta_t):\n",
     "    prob=bin(delta_t,2,n=2)\n",
-    "    deltas=96400/delta_t\n",
+    "    deltas=86400/delta_t\n",
     "    return (prob*deltas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "id": "99ae0f07-4213-4975-8dc8-5a08fde3b10b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "228.74857276314"
+       "210.27632526604552"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coincidences_in_a_day_specificdets(39e-9)"
+    "coincidences_in_a_day_specificdets(40e-9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8368246d-fda6-460a-bf6f-c14ef68fc0e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.840932194112463e-10"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_at_least_2(40e-9,p=bin)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8368246d-fda6-460a-bf6f-c14ef68fc0e2",
+   "id": "78f059dd-977b-4783-bdf9-91da81c73787",
    "metadata": {},
    "outputs": [],
    "source": []
